fix: Instagram photos spacing

--- a/styles/instagram.module.scss
+++ b/styles/instagram.module.scss
@@ -84,7 +84,7 @@
     .slider_container {
       margin-top: 1.1%;
       .slider_item {
-        flex: 0 0 calc(var(--slide-size) *3.6); // Adjust size for smaller screens
+        flex: 0 0 calc(var(--slide-size) *3.8); // Adjust size for smaller screens
       }
     }
   }
